# FlexATA

./: .gitignore  LICENSE  Pipfile  README.md  intruction.md  main.py  pyproject.toml  requirements.txt  utility.py
FlexATA/: form_builder.py  utility.py
examples/: example_content.py  example_enemy.py  example_form_pair.py  example_information.py  example_information_constraints.py  example_parellel_information.py  example_set.py  example_weights.py
sample/: sample_enemy_pairs_for_ATA.xlsx  sample_items_for_ATA.xlsx
src/build_forms/: form_assembly.py  utility.py
tests/: test_content_constraints.py  test_data.py  test_enemy_constraints.py  test_form_pair.py  test_information.py  test_information_constraints.py  test_parellel_information.py  test_set_constraints.py  test_weights.py
